--- a/findrestaurant/app/src/main/res/layout/restaurant_layout.xml
+++ b/findrestaurant/app/src/main/res/layout/restaurant_layout.xml
@@ -2,20 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#f46943"
+        android:elevation="8dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_marginRight="4dp"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/restaurant"/>
+            <TextView
+                android:id="@+id/app_name"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Khana Khazana"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textColor="#fffdfd"/>
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/city_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nearby Restaurants"
         android:textSize="18sp"
         android:textColor="#000"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/city_view"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
