--- a/findrestaurant/app/src/main/res/layout/restlist.xml
+++ b/findrestaurant/app/src/main/res/layout/restlist.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textSize="16sp"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:textColor="#000">
 
 </TextView>
