--- a/findrestaurant/app/src/main/res/layout/summary.xml
+++ b/findrestaurant/app/src/main/res/layout/summary.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.cmanideep96.findrestaurant.MainActivity">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
 
@@ -39,26 +34,17 @@
     </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="24sp"
-
-        android:text="Order Delicious food !!!!"/>
-    <EditText
-        android:id="@+id/city_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter the place"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:inputType="textMultiLine" />
-    <Button
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find restaurants"
-        android:onClick="process"/>
+        android:text="ORDER SUMMARY:"
+        android:textColor="#000"
+        android:textSize="18sp"
+        />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="16sp"
+    android:layout_margin="8dp"
+    android:textColor="#000"
+    android:id="@+id/order"/>
 </LinearLayout>
