--- a/findrestaurant/app/src/main/res/layout/abtrestaurant.xml
+++ b/findrestaurant/app/src/main/res/layout/abtrestaurant.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
 
@@ -39,6 +43,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/nametextview"
         android:textSize="24sp"
+        android:textColor="#000"
         android:text="hii"
         android:textAllCaps="true"/>
     <TextView
@@ -65,8 +70,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Menu"
-
+        android:text="Menu:"
+        android:textColor="#000"
         android:textSize="18sp"/>
 
 </LinearLayout>
@@ -98,9 +103,6 @@
         android:layout_height="0.5dp"
         android:background="#000"
         android:layout_marginBottom="8dp"/>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -133,5 +135,6 @@
             android:text="checkout"/>
     </RelativeLayout>
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
