--- a/findrestaurant/app/src/main/res/layout/summary.xml
+++ b/findrestaurant/app/src/main/res/layout/summary.xml
@@ -32,6 +32,7 @@
                 android:textColor="#fffdfd"/>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+
     <TextView
         android:layout_margin="8dp"
         android:layout_width="wrap_content"
@@ -47,4 +48,13 @@
     android:layout_margin="8dp"
     android:textColor="#000"
     android:id="@+id/order"/>
+
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_margin="8dp"
+       android:layout_gravity="center"
+       android:textColor="#000"
+       android:textSize="16sp"
+       android:text="Thank you for ordering...."/>
 </LinearLayout>
